<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_bantuan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hight_layout"
        android:text="@string/bantuan"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/noklent_fardian_erix"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_text20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/masukan"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_text20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/angka_pertama"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/size_text20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/angka_kedua"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/size_text20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Edtangka1"
            android:layout_width="@dimen/widht_edit"
            android:layout_height="@dimen/hight_layout"
            android:layout_weight="2"
            android:background="#FFFF00"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/size_text20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operator"
            android:layout_width="@dimen/widht_opr"
            android:layout_height="@dimen/hight_layout"
            android:layout_weight="2"
            android:background="#FFFF00"
            android:gravity="center"
            android:text="@string/opr"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/size_text20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Edtangka2"
            android:layout_width="@dimen/widht_edit"
            android:layout_height="@dimen/hight_layout"
            android:layout_weight="2"
            android:background="#FFFF00"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/size_text20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/jawaban_anda"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_text20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Edtjawab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#FFFF00"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_text40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hight_layout"
        android:text="@string/cek"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hight_layout"
        android:text="@string/next"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/hasil"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/size_text20sp"
        android:textStyle="bold" />


</LinearLayout>